	PR debug/42454 	* dwarf2out.c (dwarf2out_finish): Don't output range for .text 	section unless .text section was used.  Likewise for cold.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@155402 138bc75d-0d04-0410-961f-82ee72b054a4